--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "ethers": "5.1.1"
   }
 }
