--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "typescript-json-schema": "^0.54.0"
   },
   "dependencies": {
     "@json-rpc-tools/types": "^1.7.6",
